--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  top: 32px;
   border-top: solid 1px black;
   align-items: center;
   width: 100vw;
@@ -12,12 +11,13 @@
   z-index: 1;
   background-size: cover;
   overflow-y: scroll;
+  background-color: rgb(28, 28, 28);
   header {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    color: black;
+    color: white;
     width: 100vw;
     height: 45vh;
 
@@ -26,11 +26,10 @@
       font-size: 10vh;
       color: transparent;
       width: 100vw;
-      background: #666666;
+      background: white;
       -webkit-background-clip: text;
       -moz-background-clip: text;
       background-clip: text;
-      text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.5);
       padding-left: 10vmin;
     }
     h2 {
@@ -49,7 +48,7 @@
       width: 100vw;
       margin-top: 10px;
       aside {
-        background-color: rgb(171, 211, 246);
+        background-color: black;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
           rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
         width: 75vw;
@@ -60,7 +59,7 @@
           padding: 5px;
           padding-left: 10px;
           padding-right: 10px;
-          background-color: white;
+          background-color: rgb(28, 28, 28);
           border-color: white;
           margin: 10px;
           box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
@@ -78,8 +77,8 @@
     }
   }
   .postsList {
-    top: 55vh;
-
+    top: 35vh;
+    align-items: center;
     animation: fadeIn 2s;
     list-style-type: none;
     position: absolute;
@@ -90,7 +89,7 @@
     flex-direction: column;
     width: 70vw;
     border: solid 1px;
-    left: 5vw;
+    left: 10vw;
     margin-left: 10vw;
     border: none;
     .post {
