--- a/src/pages/UserSettings/UserSettings.module.scss
+++ b/src/pages/UserSettings/UserSettings.module.scss
@@ -1,23 +1,89 @@
 .UserSettings {
+  position: absolute;
+  top: 33px;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  background-color: black;
+
   section {
+    width: 90vw;
+    height: 10vh;
+    left: 10vw;
+    display: flex;
+    margin-top: 10vh;
+
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(28, 28, 28);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid 1px white;
     label {
+      font-size: 25px;
+
+      margin: 30px;
     }
     label:hover {
+      cursor: pointer;
+      color: rgb(180, 217, 247);
     }
     h1 {
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+      margin-top: 10vh;
+      color: rgb(180, 217, 247);
+      font-size: 35px;
+      padding-left: 40px;
     }
   }
   aside {
+    background-color: rgb(28, 28, 28);
+    border-radius: 5px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    width: 90vw;
+    height: 60vh;
     form {
+      width: 40vw;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
       label {
+        font-size: 30px;
+        margin: 5px;
       }
       input {
+        margin: 5px;
+        padding: 5px;
+        border-radius: 7px;
+        border: none;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
       }
       button {
+        margin-top: 5px;
+        width: 15vw;
+        border-radius: 5px;
+        border: none;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+          rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+          rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+        border: solid 1px white;
       }
       button:hover {
+        color: white;
+        background-color: rgb(180, 217, 247);
+        cursor: pointer;
       }
       #bio {
+        padding-bottom: 100px;
       }
     }
   }
@@ -37,6 +103,7 @@
         .bioInput {
         }
         button {
+          background-color: #ff6410;
         }
       }
     }
