--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,54 +1,79 @@
 .Post {
-  background-color: black;
   padding: 10px;
-  border-radius: 5px;
   width: 60vw;
-  height: 60vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 15px;
-  max-width: 1500px;
+  max-width: 1000px;
+  max-height: 600px;
+  border-top: solid 1px rgb(100, 100, 100);
   .upper {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
-
+    align-items: flex-start;
     width: 100%;
-    height: 5vh;
+    height: 10vh;
 
+    h4 {
+      font-size: 10px;
+      color: rgb(100, 100, 100);
+      background-color: rgb(35, 73, 175);
+      border-radius: 10px;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+    h3 {
+      color: rgb(150, 150, 150);
+      padding-left: 2px;
+      font-size: 12px;
+    }
     h2 {
       color: white;
     }
+    h2:hover,
+    h3:hover,
+    h4:hover {
+      cursor: pointer;
+    }
   }
   .body {
-    width: 100%;
-    height: 40vh;
+    width: 95%;
+    height: 60vh;
     overflow-y: hidden;
     .postText {
       width: 100%;
       height: 100%;
-      background-color: rgb(220, 220, 220);
+      background-color: rgb(150, 150, 150);
       color: rgb(28, 28, 28);
       font-size: calc(1vw + 1.5vh);
     }
   }
   .bottom {
-    height: 10vh;
+    height: 5vh;
     width: 100%;
     color: white;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
+
     .likes {
       width: 100%;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: flex-start;
       padding-left: 3px;
       padding-right: 3px;
+
       h4 {
-        width: 100px;
+        background-color: rgb(39, 44, 19);
+        margin-left: 10px;
+        font-size: 15px;
+        width: 40px;
+        color: white;
+        border-radius: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -62,8 +87,9 @@
     .postComments {
       width: 90%;
       padding: 3px;
-      border-radius: 3px;
+      border-radius: 20px;
       background-color: black;
+      background-color: green;
       border: 1px solid white;
     }
     .postComments:hover {
