--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   display: flex;
   justify-content: space-evenly;
-  background-color: rgb(28, 28, 28);
+  background-color: rgb(16, 18, 19);
   #logo {
     min-width: 50px;
     max-width: 3vw;
@@ -10,30 +10,29 @@
   .userInfo,
   .homePosts,
   .explore {
-    margin-top: 7vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    border-radius: 5px;
 
     h1 {
-      background-color: #ff6410;
       width: 15vw;
       color: white;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 25px;
+      font-size: 20px;
       font-weight: 500;
-      border-radius: 5px;
     }
   }
   .userInfo {
     width: 15vw;
-    height: 60vh;
-
-    background-color: black;
+    margin-top: 1vh;
+    height: 100vh;
+    padding-right: 1px;
+    border-right: solid rgb(100, 100, 100) 1px;
+    border-left: solid rgb(100, 100, 100) 0.3px;
+    border-bottom: solid rgb(100, 100, 100) 1px;
     display: flex;
     flex-direction: column;
 
@@ -42,25 +41,26 @@
       width: 8vw;
       height: 8vw;
       border-radius: 100%;
-      border: solid 1px white;
+      border: solid 1px rgb(100, 100, 100);
     }
     .userForums {
       margin-top: 10px;
       width: 100%;
       height: 40%;
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       flex-direction: column;
       align-items: center;
       h2 {
         color: white;
-        width: 100%;
+        width: 90%;
         display: flex;
         justify-content: center;
         align-items: center;
         font-weight: bold;
         height: 5vh;
         overflow-x: scroll;
+        border-bottom: solid rgb(100, 100, 100) 1px;
         -ms-overflow-style: none;
         scrollbar-width: none;
         &::-webkit-scrollbar {
@@ -70,35 +70,55 @@
       .userForum {
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+        padding-left: 10%;
         margin-top: 3px;
         color: white;
-        margin-top: 2px;
-        height: 5vh;
+        color: rgb(200, 200, 200);
+        margin-top: 20px;
+        height: 2.5vh;
         width: 90%;
-        border-bottom: solid 1px rgb(100, 100, 100);
+        // border-bottom: solid 1px rgb(100, 100, 100);
       }
     }
   }
   .homePosts {
     width: 70vw;
     max-width: 1500px;
+    .postList {
+      margin-top: 7vh;
+    }
   }
   .explore {
     width: 15vw;
-    height: 60vh;
-    background-color: black;
+    height: 100vh;
+    margin-top: 1vh;
+    border-left: solid 1px rgb(100, 100, 100);
+    border-right: solid 0.3px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
     .createPost {
       color: #ff6410;
       font-size: 25px;
       width: 100%;
       font-weight: bold;
     }
-    h1 {
+    .exploreHeading {
       width: 100%;
+      height: 10vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      h1 {
+        color: white;
+        display: flex;
+        justify-content: flex-end;
+        width: 40%;
+        margin: 4px;
+      }
     }
     .forumList {
-      color: white;
+      background-color: black;
+      color: rgb(200, 200, 200);
       height: 60vh;
       width: 100%;
       overflow-y: scroll;
