--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -1,54 +1,174 @@
 .UserPage {
-  background-color: rgb(28, 28, 28);
+  background-color: rgb(16, 18, 19);
   height: 100vh;
   display: flex;
+  align-items: center;
   width: 100vw;
+  overflow-y: hidden;
   .heading {
-    height: 10vh;
-    max-height: 60px;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // height: 10vh;
+    // max-height: 60px;
+    // font-size: 30px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
   }
-
-  .userAside {
-    width: 30vw;
+  .userForums {
+    width: 15vw;
     height: 100%;
-    color: white;
+    border-right: solid 1px rgb(100, 100, 100);
+    border-left: solid 0.3px rgb(100, 100, 100);
     display: flex;
-    align-items: center;
     flex-direction: column;
-
-    background-color: black;
-    h1 {
-      height: 10%;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 30px;
-      background-color: #ff6410;
+    align-items: center;
+    h2 {
       color: white;
-      font-weight: bold;
-      border-radius: 5px;
-    }
-    #profilePic {
-      width: 150px;
-      height: 150px;
-      border-radius: 100%;
-      border: solid 1px white;
-      margin-top: 20px;
-    }
-    .bio {
-      height: 30%;
-      width: 75%;
-      background-color: rgb(28, 28, 28);
+      width: 90%;
+      border-bottom: solid 1px rgb(100, 100, 100);
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 20px;
-      border-radius: 5px;
+      margin-top: 10px;
+    }
+    p {
+      color: rgb(150, 150, 150);
+      width: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      padding-left: 10px;
+      margin-top: 10px;
+    }
+  }
+  .userPageBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5vw;
+    justify-content: flex-start;
+
+    width: 70vw;
+    .userAside {
+      max-width: 1000px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      height: 25vh;
+      .userAsideTop {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 15vh;
+        color: white;
+        .userAsideTopLeft {
+          width: 30%;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          height: 100%;
+          .userPic {
+            width: 35%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+          }
+          .username {
+            width: 65%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-left: 10px;
+            height: 100%;
+            background-color: rgb(16, 18, 19);
+          }
+          .addPic {
+            margin-left: 0px;
+          }
+          h1 {
+            width: 10%;
+          }
+        }
+        .userAsideTopRight {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 70%;
+
+          .bio {
+            width: 90%;
+            height: 90%;
+            overflow-y: scroll;
+            color: white;
+            border: solid 1px rgb(100, 100, 100);
+            padding: 5px;
+            border-radius: 3px;
+            color: rgb(200, 200, 200);
+          }
+          ::-webkit-scrollbar {
+            display: none;
+          }
+        }
+      }
+      #profilePic {
+        width: 95px;
+        height: 95px;
+        border-radius: 100%;
+        border: solid 1px white;
+        margin-top: 20px;
+      }
+
+      .functions {
+        width: 60vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        height: 5vh;
+        margin-top: 20px;
+        //border: solid 1px rgb(100, 100, 100);
+        border-radius: 5px;
+        padding: 5px;
+        .createPost {
+          color: white;
+          border-radius: 20px;
+          border: solid 1px rgb(100, 100, 100);
+          padding-left: 10px;
+          padding-right: 10px;
+        }
+        .userFuncs {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 100%;
+          background-color: white;
+          width: 30px;
+          height: 30px;
+          color: black;
+          padding: 3px;
+          font-weight: bold;
+        }
+        .createPost:hover {
+          cursor: pointer;
+          background-color: rgb(191, 63, 27);
+        }
+      }
+    }
+    #posts {
+      // justify-content: center;
+      // display: flex;
+      // align-items: center;
+      // color: white;
+      // height: 10vh;
+      // font-size: 30px;
+      // background-color: rgb(28, 28, 28);
+    }
+    .userPosts {
+      padding: 5px;
+      width: 60vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 70vh;
       overflow-y: scroll;
       -ms-overflow-style: none;
       scrollbar-width: none;
@@ -56,66 +176,35 @@
         display: none;
       }
     }
-    .functions {
-      width: 75%;
+  }
+
+  .stats {
+    width: 15vw;
+    border-left: solid 1px rgb(100, 100, 100);
+    border-right: solid 0.3px rgb(100, 100, 100);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    h1 {
+      margin-top: 10px;
+      color: white;
+      width: 90%;
+      border-bottom: solid 1px rgb(100, 100, 100);
       display: flex;
       align-items: center;
       justify-content: center;
-      justify-content: space-evenly;
-      height: 10%;
-      margin-top: 20px;
-      border: solid 1px white;
-      border-radius: 5px;
-      .userFuncs {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 100%;
-        background-color: white;
-        width: 30px;
-        height: 30px;
-        color: black;
-        padding: 3px;
-        font-weight: bold;
-      }
-      .userFuncs:hover {
-        cursor: pointer;
-        width: 35px;
-        height: 35px;
-      }
+      border-bottom: solid 1px rgb(100, 100, 100);
+    }
+    h3 {
+      color: white;
+      margin-top: 10px;
     }
   }
-  #posts {
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    color: white;
-    height: 10vh;
-    font-size: 30px;
-    background-color: rgb(28, 28, 28);
-  }
-  .userPosts {
-    margin-right: 100px;
-    padding: 5px;
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
-  h1 {
-    background-color: #ff6410;
-    color: white;
-    width: 100%;
-    height: 100%;
-    font-size: calc(1vw + 1.5vh);
-  }
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 @media (max-width: 900px) {
