--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -80,6 +80,9 @@
         width: 90%;
         // border-bottom: solid 1px rgb(100, 100, 100);
       }
+      .userForum:hover {
+        margin-left: 10px;
+      }
     }
   }
   .homePosts {
