--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -67,7 +67,7 @@
         border-top: solid 1px white;
       }
       aside:hover {
-        background-color: aquamarine;
+        background-color: rgb(191, 63, 27);
       }
     }
     .searchList:hover {
