--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -142,6 +142,10 @@
         width: 13vw;
         border-bottom: solid 1px rgb(100, 100, 100);
       }
+      p:hover {
+        height: 5.5vh;
+        width: 13.5vw;
+      }
     }
   }
 }
