--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -39,6 +39,9 @@
       padding-left: 10px;
       margin-top: 10px;
     }
+    p:hover {
+      margin-left: 10px;
+    }
   }
   .userPageBody {
     display: flex;
