--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -1,207 +1,263 @@
 .ForumPage {
   position: relative;
   display: flex;
-  flex-direction: column;
   justify-content: flex-start;
   border-top: solid 1px black;
-  align-items: center;
+  align-items: flex-start;
   width: 100vw;
   animation: fadeIn 1s;
-  height: 140vh;
-  z-index: 1;
   background-size: cover;
-  overflow-y: scroll;
-  background-color: rgb(28, 28, 28);
-  header {
+  background-color: rgb(16, 18, 19);
+  .forumStatAside {
+    width: 15vw;
+    height: 50vh;
+    border-left: solid 1px rgb(100, 100, 100);
+    border-right: solid 0.3px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
+    border-top: solid 1px rgb(100, 100, 100);
+    border-radius: 5px;
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: black;
+    margin-top: 1vh;
+    h1 {
+      width: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom: solid 1px rgb(100, 100, 100);
+    }
+    .stat {
+      width: 90%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    #des {
+      background-color: black;
+      padding: 5px;
+      border-radius: 5px;
+    }
+  }
+  .forumSide {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: flex-start;
-    color: white;
-    width: 100vw;
-    height: 45vh;
+    align-items: center;
 
-    h1 {
-      margin: 0;
-      font-size: 10vh;
-      color: transparent;
-      width: 100vw;
-      background: white;
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      background-clip: text;
-      padding-left: 10vmin;
-    }
-    h2 {
-      padding-left: 10vmin;
-    }
-    h3 {
-      padding-left: 10vmin;
-    }
-    h4 {
-      padding-left: 10vmin;
-    }
-    section {
-      top: 40vh;
+    header {
       display: flex;
-      justify-content: center;
-      width: 100vw;
-      margin-top: 10px;
-      aside {
-        background-color: black;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-        width: 75vw;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      color: white;
+      width: 70vw;
+      height: 20vh;
+      h1 {
+        margin: 0;
+        font-size: 10vh;
+        color: transparent;
+        width: 100vw;
+        background: white;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        background-clip: text;
+        padding-left: 10vmin;
+        color: rgb(191, 63, 27);
+      }
+
+      section {
+        top: 40vh;
+        padding-left: 10vmin;
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
+        width: 70vw;
+        margin-top: 10px;
+        aside {
+          background-color: black;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+            rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+          width: 60vw;
+          display: flex;
+          justify-content: flex-end;
+          border-radius: 7px;
+          button {
+            padding: 5px;
+            padding-left: 10px;
+            padding-right: 10px;
+            background-color: rgb(28, 28, 28);
+            border-color: white;
+            margin: 10px;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
+              rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
+              rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+            border: none;
+            border-radius: 7px;
+          }
+          button:hover {
+            cursor: pointer;
+            background-color: rgb(191, 63, 27);
+            color: white;
+          }
+        }
+      }
+    }
+    .postsList {
+      display: flex;
+      top: 25vh;
+      align-items: center;
+      animation: fadeIn 2s;
+      list-style-type: none;
+      position: absolute;
+      height: 60vh;
+      flex-direction: column;
+      width: 70vw;
+      border: solid 1px;
+      left: 15vw;
+      border: none;
+      .post {
+        background-color: white;
+        padding-right: 40px;
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+          rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+          rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+        height: 80vh;
+        width: 100%;
+        margin-bottom: 15px;
         border-radius: 7px;
-        button {
-          padding: 5px;
-          padding-left: 10px;
-          padding-right: 10px;
-          background-color: rgb(28, 28, 28);
-          border-color: white;
-          margin: 10px;
-          box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px,
-            rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
-            rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-          border: none;
+        li:hover {
+          padding: 20px;
+          transition: 3s;
           border-radius: 7px;
         }
-        button:hover {
-          cursor: pointer;
-          background-color: rgb(171, 211, 246);
-          color: white;
-        }
-      }
-    }
-  }
-  .postsList {
-    top: 35vh;
-    align-items: center;
-    animation: fadeIn 2s;
-    list-style-type: none;
-    position: absolute;
-    // overflow-y: scroll;
-    // height: 80vh;
-
-    border-radius: 7px;
-    flex-direction: column;
-    width: 70vw;
-    border: solid 1px;
-    left: 10vw;
-    margin-left: 10vw;
-    border: none;
-    .post {
-      background-color: white;
-      padding-right: 40px;
-      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-      height: 80vh;
-      width: 100%;
-      margin-bottom: 15px;
-      border-radius: 7px;
-      li:hover {
-        padding: 20px;
-        transition: 3s;
-        border-radius: 7px;
-      }
-      section {
-        display: flex;
-        justify-content: space-between;
-
-        height: 10vh;
-        width: 70vw;
-        align-items: center;
-
-        h1 {
-          color: rgb(171, 211, 246);
-          padding-right: 10px;
-        }
-        h2 {
-          padding-left: 10px;
-        }
-      }
-      .postImage {
-        width: 70vw;
-        height: 60vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 2vw;
-      }
-      .postText {
-        margin-top: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: gray;
-        color: white;
-        font-size: 10vmin;
-        overflow: hidden;
-        height: 60vh;
-        width: 70vw;
-        margin: 0;
-        margin-right: 0;
-      }
-      aside {
-        display: flex;
-        width: 65vw;
-        justify-content: flex-start;
-        height: 10vh;
-
-        flex-direction: column;
-
-        .pDiv {
+        section {
           display: flex;
-          width: 68vw;
-          p {
-            width: 25%;
-            height: 2.5vh;
-            margin-top: 0;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            padding-left: 2px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+          justify-content: space-between;
+
+          height: 10vh;
+          width: 70vw;
+          align-items: center;
+
+          h1 {
+            color: rgb(171, 211, 246);
+            padding-right: 10px;
           }
-          p:hover {
-            background-color: rgb(180, 217, 247);
+          h2 {
+            padding-left: 10px;
+          }
+        }
+        .postImage {
+          width: 70vw;
+          height: 60vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-left: 2vw;
+        }
+        .postText {
+          margin-top: 0;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: gray;
+          color: white;
+          font-size: 10vmin;
+          overflow: hidden;
+          height: 60vh;
+          width: 70vw;
+          margin: 0;
+          margin-right: 0;
+        }
+        aside {
+          display: flex;
+          width: 65vw;
+          justify-content: flex-start;
+          height: 10vh;
+
+          flex-direction: column;
+
+          .pDiv {
+            display: flex;
+            width: 68vw;
+            p {
+              width: 25%;
+              height: 2.5vh;
+              margin-top: 0;
+              height: 100%;
+              display: flex;
+              align-items: center;
+              padding-left: 2px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+            p:hover {
+              background-color: rgb(180, 217, 247);
+              border-radius: 7px;
+              color: white;
+              cursor: pointer;
+            }
+            .date {
+              width: 20%;
+              display: flex;
+              justify-content: flex-end;
+              font-weight: bolder;
+            }
+            .date:hover {
+              background-color: white;
+              color: black;
+            }
+          }
+          footer {
+            align-self: center;
             border-radius: 7px;
-            color: white;
-            cursor: pointer;
-          }
-          .date {
-            width: 20%;
-            display: flex;
-            justify-content: flex-end;
-            font-weight: bolder;
-          }
-          .date:hover {
-            background-color: white;
+            padding: 2.5px;
+            border: none;
+            width: 50vw;
+            height: 5vh;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             color: black;
           }
         }
-        footer {
-          align-self: center;
-          border-radius: 7px;
-          padding: 2.5px;
-          border: none;
-          width: 50vw;
-          height: 5vh;
-          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-          color: black;
-        }
       }
     }
+    .noPosts {
+      margin-top: 10vh;
+      font-size: 25px;
+      color: black;
+    }
   }
-  .noPosts {
-    margin-top: 10vh;
-    font-size: 25px;
-    color: black;
+  .allForumsAside {
+    width: 15vw;
+    height: 100vh;
+    border-right: solid 1px rgb(100, 100, 100);
+    border-left: solid 0.3px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    padding-left: 10px;
+    color: rgb(150, 150, 150);
+    h1 {
+      color: white;
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: solid 1px rgb(100, 100, 100);
+    }
+    .allTheForums {
+      margin-top: 10px;
+    }
+    .allTheForums:hover {
+      margin-left: 10px;
+    }
   }
 }
 
