--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -1,5 +1,5 @@
 .UserFriends {
-  background-color: rgb(28, 28, 28);
+  background-color: rgb(16, 18, 19);
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -20,7 +20,7 @@
   }
   .friendsList {
     border-radius: 5px;
-    border: solid 1px white;
+    border: solid 1px rgb(100, 100, 100);
     display: flex;
     flex-direction: column;
     width: 60vw;
@@ -47,7 +47,7 @@
         border-radius: 100%;
         width: 120px;
         height: 120px;
-        border: solid white 1px;
+        border: solid rgb(100, 100, 100) 1px;
       }
       img:hover {
         cursor: pointer;
@@ -55,11 +55,12 @@
       .friendName {
       }
       button {
-        border: solid white 1px;
+        border: solid rgb(100, 100, 100) 1px;
         padding: 7px;
         border-radius: 5px;
       }
       button:hover {
+        background-color: rgb(191, 63, 27);
       }
     }
   }
