each page worked on so far wide screen orietentation fixed

--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -2,6 +2,10 @@
   width: 100vw;
   display: flex;
   justify-content: space-evenly;
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2500px;
+  margin: 0 auto;
   background-color: rgb(16, 18, 19);
   #logo {
     min-width: 50px;
