--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -4,13 +4,20 @@
   justify-content: flex-start;
   border-top: solid 1px black;
   align-items: flex-start;
+  justify-content: flex-start;
+  align-items: flex-start;
   width: 100vw;
   animation: fadeIn 1s;
   background-size: cover;
   background-color: rgb(16, 18, 19);
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2500px;
+  margin: 0 auto;
   .forumStatAside {
     width: 15vw;
     height: 50vh;
+    max-width: 500px;
     border-left: solid 1px rgb(100, 100, 100);
     border-right: solid 0.3px rgb(100, 100, 100);
     border-bottom: solid 1px rgb(100, 100, 100);
@@ -48,35 +55,32 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
+    width: 70vw;
+    max-width: 1500px;
     header {
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
+      justify-content: center;
+      align-items: center;
       color: white;
       width: 70vw;
       height: 20vh;
+      max-width: 1000px;
       h1 {
         margin: 0;
         font-size: 10vh;
         color: transparent;
-        width: 100vw;
-        background: white;
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        background-clip: text;
-        padding-left: 10vmin;
         color: rgb(191, 63, 27);
       }
 
       section {
         top: 40vh;
-        padding-left: 10vmin;
+
         display: flex;
         justify-content: flex-start;
         width: 70vw;
         margin-top: 10px;
+        max-width: 900px;
         aside {
           background-color: black;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
@@ -116,6 +120,7 @@
       height: 60vh;
       flex-direction: column;
       width: 70vw;
+      max-width: 1400px;
       border: solid 1px;
       left: 15vw;
       border: none;
@@ -234,6 +239,7 @@
   .allForumsAside {
     width: 15vw;
     height: 100vh;
+    max-width: 500px;
     border-right: solid 1px rgb(100, 100, 100);
     border-left: solid 0.3px rgb(100, 100, 100);
     border-bottom: solid 1px rgb(100, 100, 100);
