--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -1,55 +1,97 @@
 .PostPage {
-  background-color: rgb(28, 28, 28);
-  height: 100vh;
-  width: 100vw;
+  background-color: rgb(16, 18, 19);
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2500px;
+  margin: 0 auto;
+  .allForumsAside {
+    width: 15vw;
+    height: 100vh;
+    max-width: 500px;
+    border-right: solid 1px rgb(100, 100, 100);
+    border-left: solid 0.3px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    padding-left: 10px;
+    color: rgb(150, 150, 150);
+    h1 {
+      color: white;
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: solid 1px rgb(100, 100, 100);
+    }
+    .allTheForums {
+      margin-top: 10px;
+    }
+    .allTheForums:hover {
+      margin-left: 10px;
+    }
+  }
   section {
+    margin-top: 2vh;
+    //border: solid 1px rgb(100, 100, 100);
     border-radius: 5px;
-    width: 80vw;
+    background-color: rgb(16, 18, 19);
+    width: 70vw;
+    max-width: 1500px;
     display: flex;
     flex-direction: column;
-    border-left: solid 1px white;
-    background-color: black;
-    border-right: solid 1px white;
+    align-items: center;
     header {
       border-radius: 5px;
       height: 10vh;
       color: white;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      border-top: solid 1px white;
-
-      font-size: 25px;
-      background-color: black;
+      width: 70vw;
+      max-width: 1300px;
       .headerClickables {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100px;
+      }
+      #sender {
+        padding-left: 20px;
+      }
+      #postTitle {
+        padding-left: 20px;
+      }
+      #postForum {
+        margin-left: 20px;
+        background-color: rgb(35, 73, 175);
+        border-radius: 10px;
+        width: 10vw;
+        padding-right: 5px;
       }
       .headerClickables:hover {
         cursor: pointer;
       }
     }
     aside {
-      border-top: solid 1px white;
+      //border-top: solid 1px rgb(100, 100, 100);
       display: flex;
       justify-content: center;
+      align-items: center;
       height: 50vh;
+      //background-color: rgb(190, 190, 190);
+      width: 70vw;
+      max-width: 1000px;
     }
     .interactions {
+      border-bottom: solid 1px rgb(100, 100, 100);
       display: flex;
       height: 5vh;
       display: flex;
-      justify-content: space-evenly;
+      justify-content: flex-start;
       align-items: center;
       width: 100%;
-      background-color: rgb(28, 28, 28);
+      width: 90%;
       color: white;
       h4 {
+        padding-left: 10px;
         width: 100px;
         font-size: 15px;
       }
@@ -59,12 +101,14 @@
     }
     p {
       background-color: rgb(190, 190, 190);
-      width: 100%;
+      width: 70vw;
+      max-width: 1000px;
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
       font-size: calc(1vw + 1.5vh);
+      height: auto;
     }
     img {
       width: 50vw;
@@ -73,108 +117,135 @@
     img:hover {
       cursor: pointer;
     }
+    .commentDiv {
+      width: 60vw;
+      max-width: 1400px;
 
-    .commentSection {
-      width: 70vw;
-      height: 10vh;
-      top: 80vh;
-      left: 15vw;
-      overflow-y: scroll;
-
-      -ms-overflow-style: none;
-      scrollbar-width: none;
-      &::-webkit-scrollbar {
-        display: none;
-      }
-      .comment {
-        margin-top: 5px;
-        display: flex;
-        align-items: flex-start;
-        padding: 5px;
-        justify-content: flex-start;
-        color: white;
-        height: 10vh;
-        width: 60vw;
-        border: solid 1px white;
-      }
-    }
-    .inputDiv {
-      height: 20vh;
       display: flex;
-      align-items: flex-end;
-
-      justify-content: center;
-      form {
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      .commentSection {
         display: flex;
-        input {
-          width: 40vw;
-          max-width: 600px;
-          margin-bottom: 5px;
-          border-radius: 5px;
-        }
-      }
-      button {
-        margin-bottom: 5px;
-        border: solid 1px white;
-        border-radius: 5px;
-        color: white;
-        width: 10vw;
-        max-width: 200px;
-        margin-left: 20px;
-        display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        width: 60vw;
+        max-width: 1400px;
+        .comment {
+          margin-top: 5px;
+          display: flex;
+          align-items: flex-start;
+          padding: 5px;
+          justify-content: flex-start;
+          color: white;
+          height: 5vh;
+          max-height: 120px;
+          width: 55vw;
+          max-width: 1000px;
+          border-top: solid 1px rgb(100, 100, 100);
+        }
       }
-      button:hover {
-        cursor: pointer;
-        color: aquamarine;
+      .inputDiv {
+        height: 5vh;
+        max-height: 120px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        form {
+          display: flex;
+          input {
+            width: 40vw;
+            max-width: 600px;
+            margin-bottom: 5px;
+            border-radius: 5px;
+          }
+        }
+        button {
+          margin-bottom: 5px;
+          border: solid 1px white;
+          border-radius: 5px;
+          color: white;
+          width: 10vw;
+          max-width: 200px;
+          margin-left: 20px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+        button:hover {
+          cursor: pointer;
+          color: aquamarine;
+        }
       }
     }
   }
   .loading {
   }
-}
-
-@media (max-width: 900px) {
-  .PostPage {
-    section {
-      header {
-        .headerClickables:hover {
-        }
-      }
-      aside {
-      }
-      h4 {
-      }
-      h4:hover {
-      }
-      p {
-      }
-      img {
-      }
-      img:hover {
-      }
-      .interactions {
-        h4 {
-        }
-      }
-      .commentSection {
-        li {
-        }
-      }
-      .inputDiv {
-        input {
-        }
-        button {
-        }
-        button:hover {
-        }
-      }
+  .posterInfo {
+    border-left: solid 1px rgb(100, 100, 100);
+    border-right: solid 0.3px rgb(100, 100, 100);
+    width: 15vw;
+    height: 100vh;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    h1 {
+      width: 90%;
+      border-bottom: solid 1px rgb(100, 100, 100);
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    .loading {
+    h2 {
+      margin-top: 10px;
     }
   }
 }
+
+// @media (max-width: 900px) {
+//   .PostPage {
+//     section {
+//       header {
+//         .headerClickables:hover {
+//         }
+//       }
+//       aside {
+//       }
+//       h4 {
+//       }
+//       h4:hover {
+//       }
+//       p {
+//       }
+//       img {
+//       }
+//       img:hover {
+//       }
+//       .interactions {
+//         h4 {
+//         }
+//       }
+//       .commentSection {
+//         li {
+//         }
+//       }
+//       .inputDiv {
+//         input {
+//         }
+//         button {
+//         }
+//         button:hover {
+//         }
+//       }
+//     }
+//     .loading {
+//     }
+//   }
+// }
 
 // @media (prefers-color-scheme: dark) {
 //   .PostPage {
