--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -3,8 +3,13 @@
   height: 100vh;
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 100vw;
   overflow-y: hidden;
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2500px;
+  margin: 0 auto;
   .heading {
     // height: 10vh;
     // max-height: 60px;
@@ -47,10 +52,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 5vw;
     justify-content: flex-start;
 
     width: 70vw;
+    max-width: 1000px;
     .userAside {
       max-width: 1000px;
       display: flex;
@@ -127,6 +132,7 @@
         align-items: center;
         justify-content: space-evenly;
         height: 5vh;
+        max-width: 1000px;
         margin-top: 20px;
         //border: solid 1px rgb(100, 100, 100);
         border-radius: 5px;
