--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -8,7 +8,7 @@
   margin-top: 15px;
   max-width: 1000px;
   max-height: 600px;
-  border-top: solid 1px rgb(100, 100, 100);
+  border-bottom: solid 1px rgb(100, 100, 100);
   .upper {
     display: flex;
     flex-direction: column;
@@ -42,11 +42,13 @@
   .body {
     width: 95%;
     height: 60vh;
+    border-radius: 10px;
     overflow-y: hidden;
     .postText {
       width: 100%;
       height: 100%;
       background-color: rgb(150, 150, 150);
+      border-radius: 10px;
       color: rgb(28, 28, 28);
       font-size: calc(1vw + 1.5vh);
     }
