--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -100,9 +100,7 @@
     width: 15vw;
     height: 100vh;
     margin-top: 1vh;
-    border-left: solid 1px rgb(100, 100, 100);
-    border-right: solid 0.3px rgb(100, 100, 100);
-    border-bottom: solid 1px rgb(100, 100, 100);
+    background-color: black;
     .createPost {
       color: #ff6410;
       font-size: 25px;
