--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -1,50 +1,86 @@
 .OtherUserPage {
-  position: absolute;
   width: 100vw;
   height: 98vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
-  background-color: rgb(28, 28, 28);
+  background-color: rgb(16, 18, 19);
   color: white;
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2500px;
+  margin: 0 auto;
+  .allForumsAside {
+    width: 15vw;
+    height: 100vh;
+    max-width: 500px;
+    border-right: solid 1px rgb(100, 100, 100);
+    border-left: solid 0.3px rgb(100, 100, 100);
+    border-bottom: solid 1px rgb(100, 100, 100);
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    color: white;
+    padding-left: 10px;
+    color: rgb(150, 150, 150);
+    h1 {
+      color: white;
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: solid 1px rgb(100, 100, 100);
+    }
+    .allTheForums {
+      margin-top: 10px;
+    }
+    .allTheForums:hover {
+      margin-left: 10px;
+    }
+  }
   .wrong {
     height: 100vh;
     width: 100vw;
   }
   section {
-    width: 80vw;
+    width: 70vw;
     height: 90vh;
-    border-radius: 7px;
+    max-width: 1500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     header {
       border-radius: 7px;
-
       display: flex;
       align-items: center;
       justify-content: space-evenly;
-      width: 80vw;
+      width: 60vw;
+      max-width: 1000px;
       height: 25vh;
+      border-bottom: solid 1px rgb(100, 100, 100);
+      max-height: 300px;
       h1 {
       }
       .profilePic {
         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
           rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
           rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        width: 10vw;
-        height: 10vw;
+        width: 80px;
+        height: 80px;
         border-radius: 50%;
       }
 
       h6 {
         width: 25vw;
-        height: 20vh;
+        height: 10vh;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         border-radius: 7px;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-          rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-          rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+        border: solid 1px rgb(100, 100, 100);
       }
 
       aside {
@@ -103,104 +139,56 @@
       }
     }
 
-    div {
+    .otherUserPostList {
       overflow-y: scroll;
       overflow-x: hidden;
       -ms-overflow-style: none;
       scrollbar-width: none;
-      &::-webkit-scrollbar {
-        display: none;
-      }
-      top: 30vh;
-      left: auto;
-      width: 80vw;
-      padding: 0;
-      height: 65vh;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+      display: flex;
+      width: 70vw;
       overflow-y: scroll;
       flex-direction: column;
       align-items: center;
       border-radius: 7px;
-
-      .post {
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-          rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-
-        margin-left: 2.5vw;
-        margin-top: 20px;
-        width: 75vw;
-        height: 80vh;
-        background-color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        overflow-x: hidden;
-        header {
-          height: 20vh;
-          font-size: 5vmin;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 75vw;
-          font-weight: bolder;
-          border-bottom: solid 1px black;
-        }
-
-        .postImage {
-          width: 75vw;
-          height: 60vh;
-        }
-
-        h5 {
-          width: 74vw;
-          padding: 5px;
-          height: 80vh;
-          background-color: gray;
-          color: white;
-          font-size: 5vmin;
-          overflow: hidden;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
-
-        section {
-          display: flex;
-          height: 10vh;
-          margin-top: 0;
-          width: 75vw;
-          display: flex;
-          align-items: center;
-          border-top: solid 1px black;
-          p {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            margin-left: 10px;
-            width: 25%;
-          }
-
-          p:hover {
-            background-color: rgb(180, 217, 247);
-            color: white;
-            border-radius: 7px;
-            cursor: pointer;
-          }
-          .date {
-            width: 20%;
-            display: flex;
-            justify-content: flex-end;
-            font-weight: bolder;
-            margin-right: 10px;
-          }
-          .date:hover {
-            background-color: white;
-            color: black;
-          }
-        }
+      &::-webkit-scrollbar {
+        display: none;
       }
+    }
+  }
+  .otherUserStats {
+    margin-top: 1vh;
+    background-color: black;
+    width: 15vw;
+    max-width: 500px;
+    height: 30vw;
+    max-height: 1000px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    aside {
+      p {
+        margin-top: 10px;
+      }
+    }
+    .interactions {
+      p {
+        margin-top: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: solid 1px white;
+        padding: 5px;
+        border-radius: 10px;
+        background-color: rgb(100, 100, 100);
+      }
+    }
+    h1 {
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: solid 1px rgb(100, 100, 100);
     }
   }
 }
@@ -208,11 +196,10 @@
 @media (prefers-color-scheme: dark) {
   .OtherUserPage {
     section {
-      background-color: rgb(28, 28, 28);
+      background-color: rgb(16, 18, 19);
       header {
         h1 {
           text-shadow: none;
-          color: #ff6410;
         }
         .profilePic {
         }
