--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  background-color: red;
 
   flex-direction: column;
   color: white;
