--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -10,6 +10,7 @@
   width: 100vw;
   max-width: 2500px;
   margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   .heading {
     // height: 10vh;
     // max-height: 60px;
@@ -53,15 +54,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-
     width: 70vw;
-    max-width: 1000px;
+    max-width: 1500px;
     .userAside {
-      max-width: 1000px;
+      max-width: 1500px;
+      max-height: 300px;
       display: flex;
       align-items: center;
       flex-direction: column;
       height: 25vh;
+      width: 70vw;
       .userAsideTop {
         display: flex;
         justify-content: space-evenly;
@@ -82,16 +84,26 @@
             flex-direction: column;
           }
           .username {
-            width: 65%;
+            width: 200px;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding-left: 10px;
             height: 100%;
-            background-color: rgb(16, 18, 19);
           }
           .addPic {
             margin-left: 0px;
+          }
+          .submitForm {
+            z-index: 2;
+            max-width: 30vw;
+            height: 40vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            button {
+              background-color: green;
+            }
           }
           h1 {
             width: 10%;
@@ -189,13 +201,15 @@
 
   .stats {
     width: 15vw;
-    border-left: solid 1px rgb(100, 100, 100);
-    border-right: solid 0.3px rgb(100, 100, 100);
-    height: 100vh;
+    height: 40vh;
+    max-width: 500px;
+    align-self: flex-start;
+    margin-top: 1vh;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
+    background-color: black;
     h1 {
       margin-top: 10px;
       color: white;
