--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -1,9 +1,8 @@
 .FormModal {
-  position: relative;
+  position: absolute;
   width: 100vw;
   height: 100vh;
-  z-index: 10;
-  margin-left: 0;
+  z-index: 20;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,7 +12,6 @@
   /* Adjust the alpha value for transparency */
   backdrop-filter: blur(10px);
   /* Adjust the blur radius as needed */
-
   h1 {
     margin-top: 0;
     font-size: 20px;
