--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -19,7 +19,6 @@
 
     h4 {
       font-size: 10px;
-      color: rgb(100, 100, 100);
       background-color: rgb(35, 73, 175);
       border-radius: 10px;
       padding-left: 5px;
@@ -44,6 +43,7 @@
     height: 60vh;
     border-radius: 10px;
     overflow-y: hidden;
+    background-color: rgb(100, 100, 100);
     .postText {
       width: 100%;
       height: 100%;
