--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -250,6 +250,10 @@
     color: white;
     padding-left: 10px;
     color: rgb(150, 150, 150);
+    .pageTitle {
+      font-size: 50px;
+      color: rgb(191, 63, 27);
+    }
     h1 {
       color: white;
       width: 90%;
