--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -39,7 +39,10 @@
     border-bottom: solid rgb(100, 100, 100) 1px;
     display: flex;
     flex-direction: column;
-
+    .pageTitle {
+      font-size: 50px;
+      color: rgb(191, 63, 27);
+    }
     .profilePic {
       margin-top: 10px;
       width: 8vw;
@@ -98,9 +101,17 @@
   }
   .explore {
     width: 15vw;
-    height: 100vh;
+    height: 60vh;
     margin-top: 1vh;
     background-color: black;
+    max-width: 500px;
+    max-height: 600px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     .createPost {
       color: #ff6410;
       font-size: 25px;
@@ -122,7 +133,6 @@
       }
     }
     .forumList {
-      background-color: black;
       color: rgb(200, 200, 200);
       height: 60vh;
       width: 100%;
