--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -7,6 +7,10 @@
   max-width: 2500px;
   margin: 0 auto;
   .allForumsAside {
+    .pageTitle {
+      font-size: 50px;
+      color: rgb(191, 63, 27);
+    }
     width: 15vw;
     height: 100vh;
     max-width: 500px;
@@ -46,7 +50,6 @@
     flex-direction: column;
     align-items: center;
     header {
-      border-radius: 5px;
       height: 10vh;
       max-width: 150px;
       color: white;
@@ -87,7 +90,6 @@
       max-width: 1000px;
     }
     .interactions {
-      border-bottom: solid 1px rgb(100, 100, 100);
       display: flex;
       height: 5vh;
       display: flex;
@@ -115,8 +117,9 @@
       align-items: center;
       justify-content: center;
       color: white;
-      font-size: calc(1vw + 1.5vh);
-      height: auto;
+      font-size: 20px;
+      height: 90%;
+      border-radius: 5px;
     }
     img {
       width: 50vw;
@@ -128,7 +131,9 @@
     .commentDiv {
       width: 60vw;
       max-width: 1400px;
-
+      border-radius: 5px;
+      padding: 5px;
+      border: solid 1px rgb(100, 100, 100);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -138,7 +143,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-
         width: 60vw;
         max-width: 1400px;
         .comment {
@@ -161,6 +165,7 @@
         display: flex;
         align-items: flex-end;
         justify-content: center;
+        margin-top: 10px;
         form {
           display: flex;
           input {
@@ -179,19 +184,20 @@
           border: solid 1px rgb(50, 50, 50);
           margin-top: 20px;
         }
-        button {
+        .commentButton {
           margin-bottom: 5px;
           border: solid 1px white;
           border-radius: 5px;
           color: white;
-          width: 10vw;
           max-width: 200px;
           margin-left: 20px;
           display: flex;
           align-items: center;
           justify-content: center;
+          background-color: rgb(191, 63, 27);
+          padding: 2px;
         }
-        button:hover {
+        .commentButton:hover {
           cursor: pointer;
           color: aquamarine;
         }
