--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -11,14 +11,6 @@
   max-width: 2500px;
   margin: 0 auto;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  .heading {
-    // height: 10vh;
-    // max-height: 60px;
-    // font-size: 30px;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-  }
   .userForums {
     width: 15vw;
     height: 100%;
@@ -27,6 +19,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    .pageTitle {
+      font-size: 50px;
+      color: rgb(191, 63, 27);
+    }
     h2 {
       color: white;
       width: 90%;
@@ -63,7 +59,8 @@
       align-items: center;
       flex-direction: column;
       height: 25vh;
-      width: 70vw;
+      width: 60vw;
+      border-bottom: solid 1px rgb(100, 100, 100);
       .userAsideTop {
         display: flex;
         justify-content: space-evenly;
