--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -29,7 +29,7 @@
     top: 20vh;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    background-color: white;
+    color: white;
     border-radius: 7px;
     width: 60vw;
     height: 70vh;
@@ -37,46 +37,58 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    p {
-      font-size: 25px;
-      width: 60vw;
-      height: 10px;
-      margin-left: 60px;
-      color: black;
-      max-width: 1000px;
-      max-height: 900px;
+    background-color: rgb(16, 18, 19);
+    border: solid 1px rgb(100, 100, 100);
+  }
+  p {
+    font-size: 25px;
+    width: 60vw;
+    height: 10px;
+    margin-left: 60px;
+    color: black;
+    max-width: 1000px;
+    max-height: 900px;
+    color: rgb(237, 119, 49);
+  }
+  p:hover {
+    cursor: pointer;
+  }
+  h2 {
+    span {
+      color: rgb(191, 63, 27);
     }
-    p:hover {
-      cursor: pointer;
-    }
+  }
+  h2:hover {
+    color: aqua;
+  }
+  .inputField {
+    color: black;
+    max-width: 900px;
+    max-height: 900px;
+    height: 60vh;
 
-    .inputField {
-      color: black;
-      max-width: 900px;
-      max-height: 900px;
-      height: 60vh;
+    width: 30vw;
 
+    h3 {
       width: 30vw;
+      border-radius: 7px;
+      max-width: 900px;
+      border-color: white;
+      font-weight: bold;
+      margin-top: 10px;
+      color: white;
+    }
 
-      h3 {
-        width: 30vw;
-        border-radius: 7px;
-        max-width: 900px;
-        border-color: white;
-      }
+    input {
+      width: 30vw;
+      border-radius: 7px;
+      border-color: black;
+      border-width: 1px;
+      background-color: white;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+        rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 
-      input {
-        width: 30vw;
-        border-radius: 7px;
-        border-color: black;
-        border-width: 1px;
-        background-color: white;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
-          rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-        max-width: 900px;
-      }
+      max-width: 900px;
     }
 
     .button {
@@ -87,7 +99,7 @@
       border-color: white;
       width: 70px;
       height: 30px;
-      background-color: rgb(237, 119, 49);
+      background-color: rgb(191, 63, 27);
     }
 
     .button:hover {
@@ -95,7 +107,6 @@
       background-color: rgb(84, 118, 228);
       cursor: pointer;
     }
-
     #description {
       padding-bottom: 10vh;
       display: flex;
@@ -105,103 +116,103 @@
   }
 }
 
-@media (max-width: 900px) {
-  .FormModal {
-    h1 {
-      margin-top: 10vh;
-      color: black;
-      margin-left: 10px;
-    }
+// @media (max-width: 900px) {
+//   .FormModal {
+//     h1 {
+//       margin-top: 10vh;
+//       color: black;
+//       margin-left: 10px;
+//     }
 
-    section {
-      height: 100vh;
-      width: 100vw;
+//     section {
+//       height: 100vh;
+//       width: 100vw;
 
-      p {
-        font-size: 25px;
-        height: 30px;
-        width: 90vw;
-      }
+//       p {
+//         font-size: 25px;
+//         height: 30px;
+//         width: 90vw;
+//       }
 
-      .inputField {
-        width: 80vw;
+//       .inputField {
+//         width: 80vw;
 
-        h3 {
-          width: 80vw;
-        }
+//         h3 {
+//           width: 80vw;
+//         }
 
-        input {
-          width: 80vw;
-        }
-      }
+//         input {
+//           width: 80vw;
+//         }
+//       }
 
-      button {
-        width: 100px;
-        height: 50px;
-      }
+//       button {
+//         width: 100px;
+//         height: 50px;
+//       }
 
-      #description {
-      }
-    }
-  }
-}
+//       #description {
+//       }
+//     }
+//   }
+// }
 
-@media (prefers-color-scheme: dark) {
-  .FormModal {
-    h1 {
-      color: white;
-    }
+// @media (prefers-color-scheme: dark) {
+//   .FormModal {
+//     h1 {
+//       color: white;
+//     }
 
-    section {
-      border-width: 1px;
-      box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-      background-color: rgb(28, 28, 28);
+//     section {
+//       border-width: 1px;
+//       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+//         rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+//       background-color: rgb(28, 28, 28);
 
-      p {
-        color: rgb(237, 119, 49);
-      }
+//       p {
+//         color: rgb(237, 119, 49);
+//       }
 
-      .inputField {
-        color: white;
+//       .inputField {
+//         color: white;
 
-        h3 {
-        }
+//         h3 {
+//         }
 
-        input {
-          background-color: rgb(28, 28, 28);
-          color: white;
-        }
-      }
+//         input {
+//           background-color: rgb(28, 28, 28);
+//           color: white;
+//         }
+//       }
 
-      button {
-        border-color: black;
-        color: white;
-        background-color: rgb(28, 28, 28);
-      }
+//       button {
+//         border-color: black;
+//         color: white;
+//         background-color: rgb(28, 28, 28);
+//       }
 
-      #description {
-      }
-    }
-  }
-}
+//       #description {
+//       }
+//     }
+//   }
+// }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
+// @keyframes fadeIn {
+//   0% {
+//     opacity: 0;
+//   }
 
-  100% {
-    opacity: 1;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
 
-@keyframes fadeInAndUp {
-  0% {
-    opacity: 0;
-  }
+// @keyframes fadeInAndUp {
+//   0% {
+//     opacity: 0;
+//   }
 
-  100% {
-    opacity: 1;
-  }
-}
+//   100% {
+//     opacity: 1;
+//   }
+// }
