--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -2,6 +2,7 @@
   position: absolute;
   width: 100vw;
   height: 50px;
+  max-width: 2650px;
   display: flex;
   justify-content: center;
   .form {
