--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -250,6 +250,7 @@
     color: white;
     padding-left: 10px;
     color: rgb(150, 150, 150);
+    overflow-y: scroll;
     .pageTitle {
       font-size: 50px;
       color: rgb(191, 63, 27);
