--- a/src/components/Logout/Logout.module.scss
+++ b/src/components/Logout/Logout.module.scss
@@ -1,12 +1,13 @@
 .LogOut {
   //background-color: rgb(52,120,246);
   //border:  solid white 1px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 4vh;
-  max-height: 47px;
-  width: 100%;
+  border-radius: 0px;
+  height: 20px;
+  font-size: 15px;
+  max-height: 100px;
+  width: 14vw;
+
+  max-width: 500px;
   //box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
