--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,39 +1,108 @@
 .nav {
-  border-bottom: solid rgb(100, 100, 100) 1px;
+  border-bottom: solid 1px black;
+  background-color: whitesmoke;
   .tabList {
     color: rgb(200, 200, 200);
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-
-    .tab {
-      height: 4vh;
-      max-height: 47px;
-
-      width: 5vw;
+    background-color: whitesmoke;
+    color: black;
+    width: 100vw;
+    max-width: 2650px;
+    margin: 0 auto;
+    .emptyArea {
+      width: 15vw;
+      max-width: 500px;
+      height: 90%;
+      border-right: solid 1px black;
+      .date {
+        width: 30%;
+        height: 100%;
+        padding-left: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        overflow-wrap: break-word;
+        font-size: min(30px, 20px);
+        font-weight: bold;
+      }
+    }
+    .forumDes {
+      max-width: 450px;
+      height: 10vh;
+      width: 25vw;
+      display: flex;
+      align-items: flex-start;
+      padding-left: 10px;
+      justify-content: center;
+      flex-direction: column;
+      font-weight: 500;
+      border-left: solid 1px black;
     }
     .options {
       display: flex;
+      flex-direction: column;
       justify-content: space-evenly;
-      width: 29vw;
-      max-height: 47px;
+      color: black;
+      width: 15vw;
+      height: 90%;
+
+      border-left: solid 1px black;
+      max-width: 500px;
+      #userImage {
+        border: solid 1px black;
+      }
+
+      .tab {
+        border-radius: 5px;
+        height: 20px;
+        font-size: 20px;
+        max-height: 100px;
+        width: 15vw;
+        font-weight: bold;
+        max-width: 500px;
+      }
+      .tab:hover {
+        color: rgb(180, 217, 247);
+      }
     }
     .fractalus {
-      height: 4vh;
-      width: 70vw;
+      height: 100%;
+      width: 40vw;
       border-radius: 0px;
-      color: white;
       display: flex;
       align-items: center;
+      font-size: 10vh;
+      max-width: 1200px;
       justify-content: center;
-      font-weight: bold;
-      max-height: 47px;
+      font-weight: bolder;
+      text-align: center;
+      white-space: nowrap; /* Prevents text from wrapping */
+      overflow: hidden;
+      animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
     }
     .tabLogout {
-      width: 15vw;
     }
   }
   p {
     font-size: 14px;
+  }
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
   }
 }
