--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -7,9 +7,9 @@
   margin-top: 15px;
   max-width: 1000px;
   max-height: 600px;
-  border: solid 1px rgb(100, 100, 100);
+  border: solid 1px black;
   border-radius: 5px;
-  background-color: rgb(36, 38, 39);
+  background-color: white;
   .upper {
     display: flex;
     justify-content: space-evenly;
@@ -17,34 +17,31 @@
     width: 100%;
     height: 10vh;
     .upperLeft {
-      width: 50%;
+      width: 80%;
       height: 100%;
       .postTitle {
         color: rgb(150, 150, 150);
         padding-left: 2px;
         font-size: 15px;
-        color: rgb(220, 220, 220);
+        color: black;
         padding-left: 5px;
         font-weight: 900;
+
+        width: 100%;
       }
 
       .postSenderName {
-        font-size: 10px;
-        border-radius: 10px;
+        font-size: 15px;
         padding-left: 5px;
-        padding-right: 5px;
-        max-width: 100px;
         font-size: 10px;
         font-weight: bold;
-        color: rgb(170, 170, 170);
+        color: rgb(191, 63, 27);
+        width: 100%;
       }
       .postForumTitle {
-        background-color: rgb(35, 73, 175);
-        color: white;
-        width: 100px;
-        border-radius: 5px;
-        min-width: 120px;
-        max-width: 50%;
+        width: 100%;
+        border-bottom: solid 1px black;
+        color: rgb(35, 73, 175);
         font-weight: bolder;
         font-size: 12px;
         padding-left: 5px;
@@ -56,7 +53,7 @@
       }
     }
     .upperRight {
-      width: 50%;
+      width: 10%;
       height: 90%;
       display: flex;
       justify-content: flex-end;
@@ -64,15 +61,14 @@
       padding: 5px;
       .date {
         font-size: 10px;
-        color: white;
         color: rgb(220, 220, 220);
+        color: black;
       }
     }
   }
   .body {
     margin-top: 5px;
-    width: 55vw;
-    max-width: 1000px;
+    width: 54vw;
     min-height: 10vh;
     border-radius: 10px;
     overflow-y: hidden;
@@ -80,12 +76,12 @@
     justify-content: center;
     align-items: center;
     font-size: min(130px, 10px);
-    background-color: rgb(220, 220, 220);
-    .postText {
-      background-color: rgb(220, 220, 220);
-      min-width: 50vw;
-      min-height: 10vh;
+    background-color: white;
+    max-width: 990px;
 
+    .postText {
+      background-color: white;
+      min-height: 5vh;
       display: flex;
       align-items: flex-start;
       justify-content: flex-start;
@@ -94,6 +90,8 @@
       padding: 10px;
       height: 40%;
       border-radius: 5px;
+      min-width: 790px;
+      width: 25vw;
     }
   }
   .bottom {
@@ -112,6 +110,7 @@
       padding-left: 3px;
       padding-right: 3px;
       h4 {
+        color: black;
         margin-left: 5px;
       }
       .userdisliked {
