--- a/src/components/PostModal/PostModal.module.scss
+++ b/src/components/PostModal/PostModal.module.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   z-index: 4;
   left: 0;
+  top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,29 +18,35 @@
   animation: fadeIn 1s;
 
   .form {
-    background-color: rgb(28, 28, 28);
-    color: white;
+    background-color: whitesmoke;
+    max-width: 1200px;
+    color: black;
     border-radius: 7px;
     height: 80vh;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
-      rgba(0, 0, 0, 0.05) 0px 5px 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+    h3 {
+      font-size: 20px;
+      font-weight: bold;
+    }
+    h2 {
+      font-size: 16px;
+    }
     header {
       display: flex;
       flex-direction: row;
-      width: 55vw;
+      width: 40vw;
       height: 5vh;
       align-items: center;
       margin-top: -100px;
       border-top: solid 1px white;
-
+      max-width: 1000px;
       h5 {
-        border-top: solid 1px white;
+        border-top: solid 1px black;
         font-weight: light;
         padding-right: 10px;
         padding-left: 10px;
-        background-color: gray;
+        background-color: rgb(200, 200, 200);
         border-radius: 7px;
-        margin-left: 1vw;
         margin-right: 1vw;
       }
       h5:hover {
@@ -53,7 +60,6 @@
       height: 3vh;
       border-radius: 7px;
       display: flex;
-
       overflow-x: scroll;
       align-items: center;
       justify-content: flex-start;
@@ -61,10 +67,12 @@
         rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
       margin: 5px;
       border: solid 1px white;
+      max-width: 1000px;
       h4 {
         border-radius: 7px;
         height: 2.5vh;
-        background-color: black;
+        background-color: rgb(191, 63, 27);
+        color: white;
         margin-left: 2.5px;
         display: flex;
         align-items: center;
@@ -84,12 +92,13 @@
       align-items: center;
       flex-direction: column;
       border-radius: 7px;
-
+      max-width: 1200px;
       p {
         margin: 0;
         width: 60vw;
         color: rgb(191, 63, 27);
         font-size: 25px;
+        max-width: 1000px;
         padding-left: 30px;
       }
       p:hover {
@@ -104,12 +113,14 @@
       h2 {
         width: 40vw;
         border-radius: 7px;
+        max-width: 1000px;
         margin: 0;
       }
       input {
         border: solid 1px white;
         width: 40vw;
         border-radius: 7px;
+        max-width: 1000px;
         margin: 0;
         color: black;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
@@ -125,7 +136,6 @@
         margin: 10vh;
         width: 60vw;
         border-radius: 7px;
-
         height: 1px;
       }
       button {
@@ -157,121 +167,3 @@
     }
   }
 }
-
-// @media (prefers-color-scheme: dark) {
-//   .PostModal {
-//     .form {
-//       background-color: rgb(28, 28, 28);
-//       form {
-//         button {
-//           border: none;
-//           border-radius: 7px;
-//           color: black;
-//         }
-//         button:hover {
-//           color: white;
-//           background-color: #ff6410;
-//         }
-//         .forumList {
-//           border: solid 1px white;
-
-//           h4 {
-//             background-color: rgb(28, 28, 28);
-//             overflow-x: hidden;
-//             color: white;
-//             border: solid 1px white;
-//           }
-//           h4:hover {
-//             background-color: #ff6410;
-//           }
-//         }
-//       }
-//       .section {
-//         .heading {
-//           p {
-//             color: #ff6410;
-//           }
-//           h1 {
-//           }
-//         }
-//         aside {
-//           button {
-//           }
-//           button:hover {
-//           }
-
-//           h3 {
-//           }
-//           input {
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-// @media (max-width: 900px) {
-//   .PostModal {
-//     .form {
-//       width: 90vw;
-//       justify-content: center;
-//       h1 {
-//         width: 90vw;
-//       }
-//       header {
-//         width: 90vw;
-//         h5 {
-//         }
-//         h5:hover {
-//         }
-//       }
-//       .forumList {
-//         width: 85vw;
-//         h4 {
-//         }
-//         h4:hover {
-//         }
-//       }
-//       form {
-//         width: 90vw;
-//         p {
-//           width: 90vw;
-//         }
-//         p:hover {
-//         }
-//         h1 {
-//         }
-//         h2 {
-//           align-self: flex-start;
-//           padding-left: 20px;
-//         }
-//         input {
-//           width: 80vw;
-//         }
-//         #text {
-//         }
-//         .fileInput {
-//         }
-//         .line {
-//         }
-//         button {
-//         }
-//         button:hover {
-//         }
-//         .or {
-//         }
-//         .upload {
-//         }
-//       }
-//     }
-//   }
-// }
-
-// @keyframes fadeIn {
-//   0% {
-//     opacity: 0;
-//   }
-//   100% {
-//     opacity: 1;
-//   }
-// }
