--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -11,13 +11,14 @@
     display: flex;
     align-items: center;
     input {
-      background-color: rgb(39, 44, 47);
-      color: white;
+      background-color: rgb(192, 192, 192);
+      color: black;
       height: 40px;
       width: 60vw;
       margin-top: 10px;
       padding: 5px;
-      border-radius: 20px;
+      border-radius: 5px;
+      border: solid 1px black;
     }
     button {
       display: flex;
@@ -30,7 +31,7 @@
       color: white;
       font-weight: bold;
       padding: 5px;
-      border-radius: 20px;
+      border-radius: 8px;
       margin-top: 10px;
       background-color: rgb(191, 63, 27);
     }
@@ -47,28 +48,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     .searchList {
-      position: absolute;
       width: 45vw;
-      left: 26vw;
       max-width: 700px;
       z-index: 10;
-      background-color: white;
-
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      border-radius: 5px;
+      border: solid 1px black;
+      background-color: whitesmoke;
       aside {
-        background-color: black;
-        width: 100%;
+        background-color: whitesmoke;
+        width: 90%;
         padding: 3px;
-        color: white;
-        border-top: solid 1px white;
+        color: black;
+        border-top: solid 1px black;
       }
       aside:hover {
         background-color: rgb(191, 63, 27);
+        border-radius: 8px;
+        color: white;
       }
     }
     .searchList:hover {
