--- a/src/index.css
+++ b/src/index.css
@@ -4,21 +4,19 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-background-color: rgb(16, 18, 19);
-  background-color: #242424;
+
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  background-color: rgb(16, 18, 19);
+  background-color: whitesmoke;
 }
 
 a{
   color:white;
-  background-color: rgb(16, 18, 19);
+  background-color: whitesmoke;
   text-decoration: none;
   
 }
@@ -31,15 +29,15 @@ body {
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
-    background-color: rgb(16, 18, 19);
+    background-color: whitesmoke;
 }
 
 
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
-      background-color: rgb(16, 18, 19);
+ background-color: rgb(16, 18, 19);
   }
 
 
