--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -1,7 +1,7 @@
 .ForumPage {
   position: relative;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   border-top: solid 1px black;
   align-items: flex-start;
   justify-content: flex-start;
@@ -9,26 +9,23 @@
   width: 100vw;
   animation: fadeIn 1s;
   background-size: cover;
-  background-color: rgb(16, 18, 19);
+  background-color: whitesmoke;
   max-height: 3000px;
   width: 100vw;
-  max-width: 2500px;
+  max-width: 2650px;
   margin: 0 auto;
   h1 {
   }
   .forumStatAside {
     width: 15vw;
-    height: 40vh;
     max-width: 500px;
-    background-color: black;
-    border-radius: 5px;
-    color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-    background-color: black;
-    margin-top: 1vh;
+    color: black;
+    height: 100vh;
+    border-left: solid 1px black;
     h1 {
       width: 90%;
       display: flex;
@@ -44,7 +41,6 @@
       margin-top: 20px;
     }
     #des {
-      background-color: black;
       padding: 5px;
       border-radius: 5px;
     }
@@ -55,7 +51,7 @@
     justify-content: flex-start;
     align-items: center;
     width: 70vw;
-    max-width: 1500px;
+    max-width: 1650px;
     header {
       display: flex;
       flex-direction: column;
@@ -81,13 +77,13 @@
         margin-top: 10px;
         max-width: 900px;
         aside {
-          background-color: black;
           box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
             rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
           width: 60vw;
           display: flex;
           justify-content: flex-end;
           border-radius: 7px;
+
           button {
             padding: 5px;
             padding-left: 10px;
@@ -123,7 +119,9 @@
       border: solid 1px;
       left: 15vw;
       border: none;
-      background-color: rgb(16, 18, 19);
+      background-color: whitesmoke;
+      border-radius: 5px;
+      border: solid 2px black;
       .post {
         background-color: white;
         padding-right: 40px;
