--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -6,15 +6,19 @@
   align-items: center;
   max-height: 4000px;
   width: 100vw;
-  max-width: 2500px;
+  max-width: 2650px;
   margin: 0 auto;
-  background-color: rgb(16, 18, 19);
+  background-color: whitesmoke;
+  color: black;
   #logo {
     min-width: 50px;
     max-width: 3vw;
   }
   .mainBody {
     display: flex;
+    background-color: whitesmoke;
+    max-width: 2650px;
+
     .userInfo,
     .homePosts,
     .explore {
@@ -25,7 +29,7 @@
 
       h1 {
         width: 15vw;
-        color: white;
+        color: black;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -35,15 +39,13 @@
     }
     .userInfo {
       width: 15vw;
-      margin-top: 1vh;
-      height: 100vh;
       padding-right: 1px;
-      border-right: solid rgb(100, 100, 100) 1px;
-      border-left: solid rgb(100, 100, 100) 0.3px;
-      border-bottom: solid rgb(100, 100, 100) 1px;
       display: flex;
       flex-direction: column;
+      border-right: solid 1px black;
+      background-color: whitesmoke;
       .pageTitle {
+        color: black;
         font-size: 50px;
         color: rgb(191, 63, 27);
       }
@@ -52,7 +54,7 @@
         width: 8vw;
         height: 8vw;
         border-radius: 100%;
-        border: solid 1px rgb(100, 100, 100);
+        border: solid 1px black;
       }
       .userForums {
         margin-top: 10px;
@@ -63,7 +65,7 @@
         flex-direction: column;
         align-items: center;
         h2 {
-          color: white;
+          color: black;
           width: 90%;
           display: flex;
           justify-content: center;
@@ -84,8 +86,7 @@
           justify-content: flex-start;
           padding-left: 10%;
           margin-top: 3px;
-          color: white;
-          color: rgb(200, 200, 200);
+          color: rgb(80, 80, 80);
           margin-top: 20px;
           height: 2.5vh;
           width: 90%;
@@ -98,22 +99,27 @@
     }
     .homePosts {
       width: 70vw;
-      max-width: 1500px;
+      max-width: 1720px;
+      border-left: solid 1px rgb(100, 100, 100);
+      border-right: solid 1px rgb(100, 100, 100);
+      border-top: solid 1px rgb(100, 100, 100);
+      border-radius: 5px;
       .postList {
         margin-top: 7vh;
       }
     }
     .explore {
       width: 15vw;
-      margin-top: 1vh;
-      background-color: red;
-      background-color: black;
+      background-color: whitesmoke;
+      color: black;
+      max-width: 500px;
+      border-left: 1px solid black;
       .createForumDiv {
         width: 15vw;
         max-width: 500px;
       }
       .createPost {
-        color: #ff6410;
+        color: royalblue;
         font-size: 25px;
         width: 100%;
         font-weight: bold;
@@ -125,7 +131,8 @@
         align-items: center;
         justify-content: center;
         h1 {
-          color: white;
+          color: black;
+          font-weight: bold;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -134,10 +141,9 @@
       }
       .forumListDiv {
         .forumList {
-          color: rgb(200, 200, 200);
+          color: rgb(80, 80, 80);
           height: 60vh;
           width: 100%;
-
           p {
             margin-top: 2px;
             display: flex;
@@ -147,11 +153,30 @@
             margin-top: 2px;
             height: 5vh;
             width: 13vw;
-            border-bottom: solid 1px rgb(100, 100, 100);
+            position: relative;
+            color: #000;
+            text-decoration: none;
           }
+
           p:hover {
-            height: 5.5vh;
-            width: 13.5vw;
+            color: #000;
+          }
+
+          p::before {
+            content: "";
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            background-color: #000;
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+          }
+
+          p:hover::before {
+            transform: scaleX(1);
           }
         }
       }
@@ -161,18 +186,19 @@
   .footer {
     width: 100vw;
     height: 200px;
-    max-width: 3000px;
+    max-width: 2650px;
     display: flex;
-    color: white;
+    color: black;
     margin-top: 10px;
     border-right: solid 0.5px rgb(100, 100, 100);
     border-left: solid 0.5px rgb(100, 100, 100);
     .theFooter {
-      background-color: rgb(16, 18, 19);
+      background-color: whitesmoke;
       display: flex;
       height: 200px;
       width: 100vw;
       flex-direction: column;
+      max-width: 2650px;
       .upperSection {
         display: flex;
         height: 90%;
@@ -190,7 +216,7 @@
         }
         .footerSection1 {
           height: 100%;
-          width: 45%;
+          width: 40vw;
 
           .contactSection {
             height: 80%;
@@ -199,6 +225,7 @@
             align-items: center;
             .contactSection1 {
               width: 45%;
+              font-weight: bold;
               height: 100%;
 
               width: 100%;
@@ -216,15 +243,14 @@
         }
         .footerSection2 {
           height: 100%;
-          width: 35%;
+          width: 45vw;
           h3 {
             width: 100%;
             font-size: larger;
             font-weight: bold;
-            padding-left: 10%;
-            text-decoration: underline;
           }
           .industriesDiv {
+            font-weight: bold;
             padding-left: 10%;
             height: 90%;
             border-left: solid 1px rgb(100, 100, 100);
@@ -234,22 +260,26 @@
           }
         }
         .footerSection3 {
-          width: 20%;
+          width: 15vw;
           height: 100%;
           h3 {
             width: 100%;
             font-size: larger;
             font-weight: bold;
             padding-left: 10%;
-            text-decoration: underline;
           }
           .linksDiv {
             height: 90%;
             border-left: solid 1px rgb(100, 100, 100);
-
             display: flex;
             justify-content: space-evenly;
             align-items: center;
+            #links {
+              background-image: linear-gradient(
+                rgba(0, 0, 0, 1),
+                rgba(0, 0, 0, 1)
+              );
+            }
           }
         }
       }
