--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -1,5 +1,5 @@
 .UserPage {
-  background-color: rgb(16, 18, 19);
+  background-color: whitesmoke;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -8,14 +8,14 @@
   overflow-y: hidden;
   max-height: 3000px;
   width: 100vw;
-  max-width: 2500px;
+  max-width: 2650px;
   margin: 0 auto;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   .userForums {
     width: 15vw;
     height: 100%;
-    border-right: solid 1px rgb(100, 100, 100);
-    border-left: solid 0.3px rgb(100, 100, 100);
+    border-right: solid 1px black;
+    border-left: solid 0.3px black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,16 +24,17 @@
       color: rgb(191, 63, 27);
     }
     h2 {
-      color: white;
+      color: black;
+      font-weight: bold;
       width: 90%;
-      border-bottom: solid 1px rgb(100, 100, 100);
+      border-bottom: solid 1px black;
       display: flex;
       align-items: center;
       justify-content: center;
       margin-top: 10px;
     }
     p {
-      color: rgb(150, 150, 150);
+      color: black;
       width: 90%;
       display: flex;
       align-items: center;
@@ -60,7 +61,7 @@
       flex-direction: column;
       height: 25vh;
       width: 60vw;
-      border-bottom: solid 1px rgb(100, 100, 100);
+      border-bottom: solid 1px black;
       .userAsideTop {
         display: flex;
         justify-content: space-evenly;
@@ -116,10 +117,10 @@
             height: 90%;
             overflow-y: scroll;
             color: white;
-            border: solid 1px rgb(100, 100, 100);
+            border: solid 1px black;
             padding: 5px;
             border-radius: 3px;
-            color: rgb(200, 200, 200);
+            color: black;
             font-size: min(90%, 20px);
           }
           ::-webkit-scrollbar {
@@ -143,13 +144,13 @@
         height: 5vh;
         max-width: 1000px;
         margin-top: 20px;
-        //border: solid 1px rgb(100, 100, 100);
         border-radius: 5px;
         padding: 5px;
+        font-weight: 500;
         .createPost {
-          color: white;
+          color: black;
           border-radius: 20px;
-          border: solid 1px rgb(100, 100, 100);
+          border: solid 1px black;
           padding-left: 10px;
           padding-right: 10px;
         }
@@ -167,18 +168,12 @@
         }
         .createPost:hover {
           cursor: pointer;
+          color: white;
           background-color: rgb(191, 63, 27);
         }
       }
     }
     #posts {
-      // justify-content: center;
-      // display: flex;
-      // align-items: center;
-      // color: white;
-      // height: 10vh;
-      // font-size: 30px;
-      // background-color: rgb(28, 28, 28);
     }
     .userPosts {
       padding: 5px;
@@ -198,27 +193,28 @@
 
   .stats {
     width: 15vw;
-    height: 40vh;
     max-width: 500px;
     align-self: flex-start;
-    margin-top: 1vh;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-    background-color: black;
+
+    color: black;
+    height: 100vh;
+    border-left: solid 1px black;
     h1 {
       margin-top: 10px;
-      color: white;
+
       width: 90%;
-      border-bottom: solid 1px rgb(100, 100, 100);
+      border-bottom: solid 1px black;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-bottom: solid 1px rgb(100, 100, 100);
+      border-bottom: solid 1px black;
     }
     h3 {
-      color: white;
+      color: black;
       margin-top: 10px;
     }
   }
