all pages updated to new theme and look great just figure out the post liking disliking stuff then profile image upload then done

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -27,6 +27,9 @@
         font-size: min(30px, 20px);
         font-weight: bold;
       }
+      .date:hover {
+        cursor: default;
+      }
     }
     .forumDes {
       max-width: 450px;
