--- a/src/pages/OtherUserPage/OtherUserPage.module.scss
+++ b/src/pages/OtherUserPage/OtherUserPage.module.scss
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  background-color: rgb(16, 18, 19);
-  color: white;
+  background-color: whitesmoke;
+  color: black;
   max-height: 3000px;
   width: 100vw;
   max-width: 2500px;
@@ -61,6 +61,7 @@
       border-bottom: solid 1px rgb(100, 100, 100);
       max-height: 300px;
       h1 {
+        font-weight: bold;
       }
       .profilePic {
         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
@@ -82,6 +83,7 @@
         border: solid 1px rgb(100, 100, 100);
         max-width: 800px;
         padding: 5px;
+        color: black;
         overflow-wrap: break-word; /* Ensures long words break */
         word-wrap: break-word; /* Legacy support for older browsers */
         word-break: break-word; /* Ensures any word breaks */
@@ -99,7 +101,6 @@
         align-items: center;
         flex-direction: column;
         border-radius: 7px;
-
         box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
           rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
           rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
@@ -165,15 +166,15 @@
   }
   .otherUserStats {
     margin-top: 1vh;
-    background-color: black;
+    background-color: whitesmoke;
     width: 15vw;
     max-width: 500px;
-    height: 30vw;
-    max-height: 1000px;
+    height: 100vh;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
+    border-left: solid 1px black;
     aside {
       p {
         margin-top: 10px;
@@ -185,14 +186,16 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        border: solid 1px white;
+        border: solid 1px black;
         padding: 5px;
         border-radius: 10px;
-        background-color: rgb(100, 100, 100);
+        background-color: white;
+        font-weight: bold;
       }
       p:hover {
         background-color: rgb(191, 63, 27);
         cursor: pointer;
+        color: white;
       }
     }
     h1 {
