--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -7,7 +7,6 @@
   max-width: 2650px;
   margin: 0 auto;
   .allForumsAside {
-    border-top: solid 1px rgb(100, 100, 100);
     .pageTitle {
       font-size: 50px;
       color: rgb(191, 63, 27);
@@ -42,6 +41,7 @@
     }
   }
   section {
+    margin-top: 1vh;
     border-radius: 5px;
     background-color: whitesmoke;
     width: 70vw;
@@ -49,10 +49,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
     max-height: 1500px;
     header {
-      border: solid 0.05px rgb(100, 100, 100);
+      border: solid 1px black;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
       height: 15vh;
@@ -64,14 +63,15 @@
       width: 60vw;
       max-width: 1400px;
       border-bottom: none;
-      background-color: rgb(36, 38, 39);
+      background-color: white;
       .headerClickables {
       }
       #sender {
         padding-left: 20px;
-        max-width: 150px;
+        max-width: 90%;
         margin-top: 5px;
         font-size: min(130px, 15px);
+        color: rgb(191, 63, 27);
       }
       #postTitle {
         max-width: 500px;
@@ -80,19 +80,16 @@
         font-size: min(130px, 20px);
         font-weight: bold;
         margin-top: 5px;
+        color: black;
       }
       #postForum {
         margin-top: 5px;
-        max-width: 100px;
+        max-width: 90%;
         margin-left: 20px;
-        background-color: rgb(35, 73, 175);
-        border-radius: 10px;
-        width: 10vw;
+        color: rgb(180, 217, 247);
+        font-weight: bold;
         padding: 2px;
-        padding-left: 5px;
-        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-          rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-        font-size: min(130px, 10px);
+        border-bottom: solid 1px black;
       }
       .headerClickables:hover {
         cursor: pointer;
@@ -107,8 +104,8 @@
       //background-color: rgb(190, 190, 190);
       width: 60vw;
       max-width: 1400px;
-      border-left: solid 0.3px rgb(100, 100, 100);
-      border-right: solid 0.3px rgb(100, 100, 100);
+      border-left: solid 1px black;
+      border-right: solid 1px black;
       background-color: white;
     }
     .interactions {
@@ -118,11 +115,11 @@
       justify-content: flex-start;
       align-items: center;
       width: 60vw;
-      color: white;
-      border-left: solid 0.3px rgb(100, 100, 100);
-      border-right: solid 0.3px rgb(100, 100, 100);
+      color: black;
+      border-left: solid 1px black;
+      border-right: solid 1px black;
       max-width: 1400px;
-      background-color: rgb(36, 38, 39);
+      background-color: white;
 
       .disklikes:hover {
       }
@@ -136,7 +133,7 @@
       cursor: pointer;
     }
     p {
-      background-color: rgb(220, 220, 220);
+      background-color: white;
       width: 58vw;
       display: flex;
       align-items: flex-start;
@@ -155,13 +152,13 @@
       cursor: pointer;
     }
     .commentDiv {
-      background-color: rgb(36, 38, 39);
+      background-color: white;
       width: 60vw;
       max-width: 1400px;
       border-bottom-left-radius: 5px;
       border-bottom-right-radius: 5px;
       padding: 5px;
-      border: solid 0.3px rgb(100, 100, 100);
+      border: solid 1px black;
       border-top: none;
       display: flex;
       flex-direction: column-reverse;
@@ -185,11 +182,11 @@
           margin-top: 10px;
           font-size: min(5vh, 20px);
           border-radius: 5px;
-          border-bottom: solid 1px rgb(100, 100, 100);
-          background-color: rgb(16, 18, 19);
+          border: solid 1px black;
+          background-color: whitesmoke;
 
           .commentLeftSide {
-            background-color: rgb(16, 18, 19);
+            background-color: whitesmoke;
             font-size: 15px;
             border-radius: 0%;
             display: flex;
@@ -202,8 +199,8 @@
           }
 
           .commentRightSide {
-            color: white;
-            background-color: rgb(16, 18, 19);
+            color: black;
+            background-color: whitesmoke;
             display: flex;
             justify-content: flex-start;
             align-items: flex-start; /* Align items to the start of the container */
@@ -229,6 +226,8 @@
         form {
           display: flex;
           input {
+            background-color: rgb(192, 192, 192);
+            border: solid 1px black;
             width: 40vw;
             max-width: 600px;
             margin-bottom: 5px;
@@ -249,6 +248,7 @@
           border: solid 1px white;
           border-radius: 5px;
           color: white;
+          font-weight: bold;
           max-width: 200px;
           margin-left: 20px;
           display: flex;
@@ -259,7 +259,8 @@
         }
         .commentButton:hover {
           cursor: pointer;
-          color: aquamarine;
+          color: white;
+          background-color: rgb(180, 217, 247);
         }
       }
     }
@@ -270,17 +271,13 @@
     border-left: solid 1px rgb(100, 100, 100);
     border-right: solid 0.3px rgb(100, 100, 100);
     border-bottom: solid 1px rgb(100, 100, 100);
-    border-top: solid 1px rgb(100, 100, 100);
     width: 15vw;
-    height: 50vh;
-    color: white;
+    color: black;
     display: flex;
     max-height: 1000px;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
     justify-content: flex-start;
-    background-color: black;
     h1 {
       width: 90%;
       border-bottom: solid 1px rgb(100, 100, 100);
