--- a/src/pages/UserFriends/UserFriends.module.scss
+++ b/src/pages/UserFriends/UserFriends.module.scss
@@ -1,13 +1,12 @@
 .UserFriends {
-  background-color: rgb(16, 18, 19);
+  background-color: whitesmoke;
   height: 100vh;
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-
   flex-direction: column;
-  color: white;
+  color: black;
   .title {
     width: 100vw;
     height: 10vh;
@@ -17,6 +16,7 @@
     padding-left: 10vw;
   }
   h1 {
+    font-weight: bold;
   }
   .friendsList {
     border-radius: 5px;
@@ -62,6 +62,7 @@
       }
       button:hover {
         background-color: rgb(191, 63, 27);
+        color: white;
       }
     }
   }
