--- a/src/pages/UserSettings/UserSettings.module.scss
+++ b/src/pages/UserSettings/UserSettings.module.scss
@@ -1,14 +1,13 @@
 .UserSettings {
   position: absolute;
-  top: 33px;
+  top: 15vh;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: white;
-  background-color: rgb(16, 18, 19);
-
+  background-color: whitesmoke;
   section {
     width: 90vw;
     height: 10vh;
@@ -18,15 +17,16 @@
 
     border-radius: 5px;
     padding: 10px;
-    background-color: rgb(28, 28, 28);
+    background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: solid 1px rgb(100, 100, 100);
     label {
       font-size: 25px;
-
       margin: 30px;
+      color: black;
+      font-weight: bold;
     }
     label:hover {
       cursor: pointer;
@@ -43,7 +43,7 @@
     }
   }
   aside {
-    background-color: rgb(28, 28, 28);
+    background-color: whitesmoke;
     border-radius: 5px;
     padding: 10px;
     display: flex;
@@ -58,13 +58,14 @@
       label {
         font-size: 30px;
         margin: 5px;
+        color: black;
       }
       input {
         margin: 5px;
         padding: 5px;
         border-radius: 7px;
         border: none;
-        background-color: rgb(39, 44, 47);
+        background-color: rgb(192, 192, 192);
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
           rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
       }
@@ -77,11 +78,12 @@
           rgba(0, 0, 0, 0.3) 0px 3px 7px -1px,
           rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
         border: solid 1px white;
+        background-color: rgb(191, 63, 27);
       }
       button:hover {
         color: white;
-        background-color: rgb(191, 63, 27);
         cursor: pointer;
+        background-color: rgb(180, 217, 247);
       }
       #bio {
         padding-bottom: 100px;
